--- a/templates/error.html
+++ b/templates/error.html
@@ -1,5 +1,8 @@
+<!-- prettier-ignore -->
 {% extends 'base.html' %}
 {% block content %}
-    <h2>{{msg}}</h2>
-    <p>Click <a href="/">here</a> to go home.</p>
+
+<h2>{{msg}}</h2>
+<p>Click <a href="/">here</a> to go home.</p>
+
 {% endblock %}
