--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,17 @@
+<!-- prettier-ignore -->
 {% extends 'base.html' %}
-
 {% load static %}
 
+<!-- prettier-ignore -->
 {% block title %}
 <title>SAMS</title>
 {% endblock %}
 
+<!-- prettier-ignore -->
 {% block content %}
 
-    <!-- Checking Templates  -->
-    <h1>This is Working</h1>
-    <small>Testing</small>
+<!-- Checking Templates  -->
+<h1>This is Working</h1>
+<small>Testing</small>
 
 {% endblock %}
