--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,3 +1,4 @@
+<!-- prettier-ignore -->
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
@@ -5,52 +6,52 @@
 <title>SAMS | Change Password</title>
 {% endblock %}
 
+<!-- prettier-ignore -->
 {% block head %}
-<style>
-	/* Custom CSS */
-	#id_old_password,
-	#id_new_password1,
-	#id_new_password2 {
-		margin-top: 3px;
-		font-size: 1.1rem;
-		font-family: 'Karla', sans-serif;
-		color: #062743 !important;
-		background-color: #daeaf6 !important;
-		border: 0px;
-		border-radius: 2rem !important;
-		box-shadow: inset 5px 5px 10px #c2d0db,
-			inset -5px -5px 10px #daeaf6;
-	}
 
-	#change_view {
-		background-color: #daeaf6;
-		border-radius: 2rem !important;
-		box-shadow: 8px 8px 16px #aebbc5,
-			-8px -8px 16px #daeaf6;
-	}
+<style>
+    /* Custom CSS */
+    #id_old_password,
+    #id_new_password1,
+    #id_new_password2 {
+        margin-top: 3px;
+        font-size: 1.1rem;
+        font-family: "Karla", sans-serif;
+        color: #062743 !important;
+        background-color: #daeaf6 !important;
+        border: 0px;
+        border-radius: 2rem !important;
+        box-shadow: inset 5px 5px 10px #c2d0db, inset -5px -5px 10px #daeaf6;
+    }
+
+    #change_view {
+        background-color: #daeaf6;
+        border-radius: 2rem !important;
+        box-shadow: 8px 8px 16px #aebbc5, -8px -8px 16px #daeaf6;
+    }
 </style>
+
 {% endblock %}
 
+<!-- prettier-ignore -->
 {% block content %}
 
 <section class="row">
-	<div class="col-sm-10 col-md-8 col-lg-5 mx-auto my-3 my-md-0 px-3 p-sm-0">
-		<div class="card border_white p-2 p-md-3" id="change_view">
-			<div class="card-body">
-				<div class="text-center text_d_blue arvo" style="margin-bottom: 35px;">
-					<h3 class="m-0">Change Password</h3>
-				</div>
-				<form method="post" class="form" class="needs-validation" novalidate>
-					{% csrf_token %}
-					{{ form|crispy }}
-					<button
-						class="btn btn-block border_white btn-cust neu_icon text-success text-center align-self-center"
-						type="submit">Change My Password
-					</button>
-				</form>
-			</div>
-		</div>
-	</div>
+    <div class="col-sm-10 col-md-8 col-lg-5 mx-auto my-3 my-md-0 px-3 p-sm-0">
+        <div class="card border_white p-2 p-md-3" id="change_view">
+            <div class="card-body">
+                <div class="text-center text_d_blue arvo" style="margin-bottom: 35px">
+                    <h3 class="m-0">Change Password</h3>
+                </div>
+                <form method="post" class="form" class="needs-validation" novalidate>
+                    <!-- prettier-ignore -->
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="btn btn-block border_white btn-cust neu_icon text-success text-center align-self-center" type="submit">Change My Password</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </section>
 
 {% endblock %}
