--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,4 +1,6 @@
+<!-- prettier-ignore -->
 {% autoescape off %}
+
 To initiate the password reset process for your {{ user.get_username }}  Account,
 click the link below:
 
@@ -9,4 +11,5 @@ window instead.
 
 Sincerely,
 The Admin Team
+
 {% endautoescape %}
