--- a/templates/subject/HourDetail.html
+++ b/templates/subject/HourDetail.html
@@ -1,3 +1,4 @@
+<!-- prettier-ignore -->
 {% extends 'base.html' %}
 {% load static %}
 
@@ -5,6 +6,7 @@
 <title>SAMS | {{ hour_obj.classroom|upper }} | {{ hour_obj.name|upper }} | Subject List</title>
 {% endblock %}
 
+<!-- prettier-ignore -->
 {% block content %}
 
 <div class="text-center text_d_blue arvo my-4 mt-md-0 mb-md-4">
