--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,7 +2,7 @@
 
 <div class="row mx-0 mt-5 text-center bg_d_blue">
     <div class="col-12 col-md my-3">
-        <img class="mb-2 rounded-circle" src=" {% static 'img/logo.jpg' %}" alt="" width="20" height="20">
+        <img class="mb-2 rounded-circle" src=" {% static 'img/logo.jpg' %}" alt="" width="20" height="20" />
         <small class="d-block text_l_bluish_white">SAMS</small>
         <small class="d-block mb-3 text_l_bluish_white">©2020</small>
     </div>
