--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,9 +1,10 @@
+<!-- prettier-ignore -->
 {% extends 'base.html' %}
 
 {% block content %}
 
 <section class="container">
-	<h3 class=" text-center color-slateblue my-3">Your Password has been changed successfully</h3>
+    <h3 class="text-center color-slateblue my-3">Your Password has been changed successfully</h3>
 </section>
 
 {% endblock %}
