--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,9 +1,10 @@
+<!-- prettier-ignore -->
 {% extends 'base.html' %}
 
 {% block content %}
+
 <section class="container">
-  <p>
-    Your password has been set. You may go ahead and <a href="{% url 'login' %}">sign in</a> now.
-  </p>
+    <p>Your password has been set. You may go ahead and <a href="{% url 'login' %}">sign in</a> now.</p>
 </section>
+
 {% endblock %}
