--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,20 +1,22 @@
+<!-- prettier-ignore -->
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
+<!-- prettier-ignore -->
 {% block content %}
+
 <section class="container">
-  {% if validlink %}
+    {% if validlink %}
     <h3 class="text-center">Change password</h3>
     <form method="post" class="form">
-      {% csrf_token %}
-      {{ form|crispy }}
-      <button type="submit" class="btn btn-success">Change password</button>
+        <!-- prettier-ignore -->
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button type="submit" class="btn btn-success">Change password</button>
     </form>
-  {% else %}
-    <p>
-      The password reset link was invalid, possibly because it has already been used.
-      Please request a new password reset.
-    </p>
-  {% endif %}
+    {% else %}
+    <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+    {% endif %}
 </section>
+
 {% endblock %}
