--- a/templates/subject/HourAddStudent.html
+++ b/templates/subject/HourAddStudent.html
@@ -1,3 +1,4 @@
+<!-- prettier-ignore -->
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
@@ -5,42 +6,41 @@
 <title>SAMS | {{ sub_obj.sub_name }} | Add Students</title>
 {% endblock %}
 
+<!-- prettier-ignore -->
 {% block head %}
-<style>
-	.form-check-label {
-		color: #062743 !important;
-		font-family: 'Karla', sans-serif !important;
-		font-size: 20px !important;
-	}
 
-	.form-check-input {
-		margin-top: 7px;
-	}
+<style>
+    .form-check-label {
+        color: #062743 !important;
+        font-family: "Karla", sans-serif !important;
+        font-size: 20px !important;
+    }
+
+    .form-check-input {
+        margin-top: 7px;
+    }
 </style>
+
 {% endblock %}
 
+<!-- prettier-ignore -->
 {% block content %}
+
 <section class="pl-md-4 d-flex flex-column flex-md-row pt-md-2">
-	<h5 class="text-muted d-none d-md-flex justify-content-center justify-content-md-start">
-		Classroom :
-	</h5>
-	<h5 class="ml-2 capitalize text-muted text-muted d-flex justify-content-center justify-content-md-start">
-		{{ class_obj }}
-	</h5>
+    <h5 class="text-muted d-none d-md-flex justify-content-center justify-content-md-start">Classroom :</h5>
+    <h5 class="ml-2 capitalize text-muted text-muted d-flex justify-content-center justify-content-md-start">{{ class_obj }}</h5>
 </section>
 <section class="container px-md-4 pb-4 body_box_shadow border_white mx-md-3">
-	<div class="text-center text_d_blue arvo my-4">
-		<h3 class="m-0">Add Students for {{ sub_obj.sub_name }}</h3>
-	</div>
+    <div class="text-center text_d_blue arvo my-4">
+        <h3 class="m-0">Add Students for {{ sub_obj.sub_name }}</h3>
+    </div>
 
-	<form
-		class="container form needs-validation d-flex flex-column justify-content-center justify-content-md-start align-items-center align-items-md-start"
-		method="POST" novalidate>
-		{% csrf_token %}
-		{{ form|crispy }}
-		<input type="submit" class="btn border_white btn-cust neu_icon text-success align-self-center"
-			value="Add Students">
-	</form>
+    <form class="container form needs-validation d-flex flex-column justify-content-center justify-content-md-start align-items-center align-items-md-start" method="POST" novalidate>
+        <!-- prettier-ignore -->
+        {% csrf_token %}
+        {{ form|crispy }}
+        <input type="submit" class="btn border_white btn-cust neu_icon text-success align-self-center" value="Add Students" />
+    </form>
 </section>
 
 {% endblock %}
