--- a/templates/user_module/createstaff.html
+++ b/templates/user_module/createstaff.html
@@ -1,3 +1,4 @@
+<!-- prettier-ignore -->
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
@@ -5,50 +6,41 @@
 <title>SAMS | Create Staff</title>
 {% endblock %}
 
+<!-- prettier-ignore -->
 {% block head %}
+
 <style>
-	/* Custom CSS */
-	#create_staff .form-group label {
-		color: #062743;
-		font-size: 1.1rem;
-		font-family: 'arvo';
-	}
+    /* Custom CSS */
+    #create_staff .form-group label {
+        color: #062743;
+        font-size: 1.1rem;
+        font-family: "arvo";
+    }
 </style>
+
 {% endblock %}
 
+<!-- prettier-ignore -->
 {% block content %}
 
 <div class="container body_box_shadow border_white mx-md-3">
-	<div class="text-center text_d_blue arvo my-4">
-		<h3 class="m-0">Staff&nbsp;Creation&nbsp;Form</h3>
-	</div>
-	<form method="POST" class="form needs-validation" autocomplete="off" novalidate>
-		{% csrf_token %}
-		<div class="form-row" id="create_staff">
-			<div class="form-group col-md-12">
-				{{ form.username|as_crispy_field }}
-			</div>
-			<div class="form-group col-md-6 pr-md-2">
-				{{ form.first_name|as_crispy_field }}
-			</div>
-			<div class="form-group col-md-6 pl-md-2">
-				{{ form.last_name|as_crispy_field }}
-			</div>
-			<div class="form-group col-md-12">
-				{{ form.email|as_crispy_field }}
-			</div>
-			<div class="form-group col-md-6 pr-md-2">
-				{{ form.password|as_crispy_field }}
-			</div>
-			<div class="form-group col-md-6 pl-md-2">
-				{{ form.confirm_password|as_crispy_field }}
-			</div>
-			<div class="form-group col-12 d-flex justify-content-center justify-content-md-start">
-				<button class="btn border_white btn-cust neu_icon text-success align-self-center" type="submit">
-					Create&nbsp;Staff
-				</button>
-			</div>
-		</div>
-	</form>
+    <div class="text-center text_d_blue arvo my-4">
+        <h3 class="m-0">Staff&nbsp;Creation&nbsp;Form</h3>
+    </div>
+    <form method="POST" class="form needs-validation" autocomplete="off" novalidate>
+        {% csrf_token %}
+        <div class="form-row" id="create_staff">
+            <div class="form-group col-md-12">{{ form.username|as_crispy_field }}</div>
+            <div class="form-group col-md-6 pr-md-2">{{ form.first_name|as_crispy_field }}</div>
+            <div class="form-group col-md-6 pl-md-2">{{ form.last_name|as_crispy_field }}</div>
+            <div class="form-group col-md-12">{{ form.email|as_crispy_field }}</div>
+            <div class="form-group col-md-6 pr-md-2">{{ form.password|as_crispy_field }}</div>
+            <div class="form-group col-md-6 pl-md-2">{{ form.confirm_password|as_crispy_field }}</div>
+            <div class="form-group col-12 d-flex justify-content-center justify-content-md-start">
+                <button class="btn border_white btn-cust neu_icon text-success align-self-center" type="submit">Create&nbsp;Staff</button>
+            </div>
+        </div>
+    </form>
 </div>
+
 {% endblock %}
